--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
     </section>
 
     <footer class="footer">
-        <span>Diseñado por Milagros</span>
+        <span>Diseñado por Milagros Peqqueña</span>
     </footer>
     <script src="script.js"></script>
 </body>
