--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <article class="text-lg-right">
                 <aside class="text-lg-right">
                     <h1>Milagros Peqqueña</h1>
-                    <h5>Programadora <i>Full-Stack</i></h5>
+                    <h5>Programadora Junior<i> Full-Stack</i></h5>
                 </aside>
                 <p>
                     Egresada de la  carrera Computación e Informática con un gran interés en el Diseño y desarrollo <i>web</i>. Tengo gran capacidad para adaptarme a todo tipo de entornos y aportar siempre lo mejor de mí. Me caracterizo por mi facilidad para el trabajo en equipo y mi entusiasmo por aprender y desarrollar mis habilidades. En busca de una oportunidad laboral en la que adquirir más experiencia.
@@ -155,8 +155,8 @@
                 <img src="assets/img/portfolio-1.jpg" alt="Trabajo1">
                 <aside class="portafolio-card-info">
                     <div>
-                        <h3>Página web ISTP Julio Cesar Tello Secretariado Ejecutivo</h3>
-                        <p>Se elaboró Pagina web secretariado ejecutivo utilizando WordPress. Usando plugins Elementor, Elements Kit, Whatsapp, Messenger, WP-Rocket, WP-Smush, Plantilla de Envato</p>
+                        <h3>Página web Secretariado Ejecutivo</h3>
+                        <p>Se elaboró Pagina web para la carrea Secretariado Ejecutivo utilizando WordPress. Usando plugins Elementor, Elements Kit, Whatsapp, Messenger, WP-Rocket, WP-Smush, Plantilla de Envato</p>
                     </div>
                 </aside>
             </a>
